--- a/enclave_runner/Dockerfile
+++ b/enclave_runner/Dockerfile
@@ -13,7 +13,7 @@ WORKDIR /usr/src/app
 
 # Copy the current directory contents into the container at /usr/src/app
 COPY . .
-COPY ./att_doc_verifier /usr/src/app/att_doc_verifier/
+COPY /home/ec2-user/dev/aws-nitro-enclaves-samples/att_doc_verifier /usr/src/app/att_doc_verifier/
 
 # Copy the certificate
 COPY enclaves.pem /etc/ssl/certs/enclavees.pem
