Added new Dockerfile

--- a/enclave_runner/Dockerfile
+++ b/enclave_runner/Dockerfile
@@ -15,7 +15,7 @@ WORKDIR /usr/src/app/enclave_runner
 COPY . .
 
 # Copy the certificate
-COPY enclaves.pem /etc/ssl/certs/enclavees.pem
+COPY enclaves.pem /etc/ssl/certs/enclaves.pem
 
 # Copy the private key
 COPY enclaves.key /etc/ssl/private/enclaves.key
@@ -33,5 +33,5 @@ EXPOSE 50051
 ENV NAME World
 
 # Run script.sh when the container launches
-CMD ["./docker_verifier_script.sh"]
-#CMD ["/bin/bash"]
+#CMD ["./docker_verifier_script.sh"]
+CMD ["/bin/bash"]
