--- a/enclave_runner/service.yaml
+++ b/enclave_runner/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-app-service
+  name: enclave-runner-service
 spec:
   type: NodePort
   selector:
-    app: enclave_runner_container
+    app: enclave-runner-container
   ports:
     - protocol: TCP
       port: 50051
