--- a/enclave_runner/deployment.yaml
+++ b/enclave_runner/deployment.yaml
@@ -15,5 +15,6 @@ spec:
       containers:
       - name: enclave-runner-container
         image: enclave-app-image
+        imagePullPolicy: Never
         ports:
         - containerPort: 30000
