Added new Dockerfile

--- a/enclave_runner/Dockerfile
+++ b/enclave_runner/Dockerfile
@@ -36,5 +36,5 @@ EXPOSE 50051
 ENV NAME World
 
 # Run script.sh when the container launches
-CMD ["./docker_verifier_script.sh"]
-#CMD ["/bin/bash"]
+#CMD ["./docker_verifier_script.sh"]
+CMD ["/bin/bash"]
