--- a/enclave_runner/Dockerfile
+++ b/enclave_runner/Dockerfile
@@ -37,4 +37,5 @@ ENV NAME World
 
 # Run script.sh when the container launches
 #CMD ["./docker_verifier_script.sh"]
-CMD ["/bin/bash"]
+#CMD ["/bin/bash"]
+CMD tail -f /dev/null
